--- a/web/template/frame.html
+++ b/web/template/frame.html
@@ -36,7 +36,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-md navbar-dark sticky-top bg-dark mb-4">
+  <nav class="navbar navbar-expand-md navbar-dark sticky-top bg-dark mb-1">
     <a class="navbar-brand" href="/home">File Manager</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
       aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,7 +58,19 @@
   </nav>
 
   <main role="main" class="container">
-    <table class="table table-hover">
+    <div class="d-flex justify-content-between mb-1">
+      <div class="btn-group" role="group" aria-label="Basic example">
+        <button type="button" class="btn btn-sm btn-outline-secondary">Download</button>
+        <button type="button" class="btn btn-sm btn-outline-secondary">Archive</button>
+        <button type="button" class="btn btn-sm btn-outline-secondary">Move</button>
+        <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
+      </div>
+      <div class="btn-group" role="group" aria-label="Basic example">
+        <button type="button" class="btn btn-sm btn-outline-secondary">Upload File</button>
+        <button type="button" class="btn btn-sm btn-outline-secondary">New Folder</button>
+      </div>
+    </div>
+    <table class="table border table-hover table-sm">
       <thead class="thead-light">
         <tr>
           <th><input type="checkbox" id="checkAll" /></th>
