--- a/web/template/frame.html
+++ b/web/template/frame.html
@@ -60,10 +60,10 @@
   <main role="main" class="container">
     <div class="d-flex justify-content-between mb-1">
       <div class="btn-group" role="group" aria-label="Basic example">
-        <button type="button" class="btn btn-sm btn-outline-secondary">Download</button>
-        <button type="button" class="btn btn-sm btn-outline-secondary">Archive</button>
-        <button type="button" class="btn btn-sm btn-outline-secondary">Move</button>
-        <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
+        <button id="download" type="button" class="btn btn-sm btn-outline-secondary">Download</button>
+        <button id="archive" type="button" class="btn btn-sm btn-outline-secondary">Archive</button>
+        <button id="move" type="button" class="btn btn-sm btn-outline-secondary">Move</button>
+        <button id="delete" type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
       </div>
       <div class="btn-group" role="group" aria-label="Basic example">
         <button type="button" class="btn btn-sm btn-outline-secondary">Upload File</button>
@@ -73,7 +73,7 @@
     <table class="table border table-hover table-sm">
       <thead class="thead-light">
         <tr>
-          <th><input type="checkbox" id="checkAll" /></th>
+          <th><input type="checkbox" class="select-all" /></th>
           <th scope="col">名称<i class="fa fa-fw fa-sort"></i></th>
           <th style="width: 120px;" scope="col">大小<i class="fa fa-fw fa-sort"></i></th>
           <th style="width: 200px;" scope="col">日期<i class="fa fa-fw fa-sort"></i></th>
@@ -81,8 +81,8 @@
       </thead>
       <tbody>
         {{ range .list }}
-        <tr>
-          <td style="width:30px;"><input type="checkbox" name="imgVo" value="{{ .Name }}" /></td>
+        <tr class="file-row">
+          <td style="width:30px;"><input type="checkbox" class="select" name="imgVo" value="{{ .Name }}" /></td>
           {{ if .IsDir }}
           <td><i class="fa fa-folder"></i> <a href="{{ .Href }}">{{ .Name }}</a></td>
           <td>--</td>
@@ -96,15 +96,16 @@
       </tbody>
     </table>
   </main>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+  crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.min.js"
     integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
     crossorigin="anonymous"></script>
+    <script src="/web/js/frame.js"></script>
 </body>
 
 </html>
