--- a/web/template/frame.html
+++ b/web/template/frame.html
@@ -67,8 +67,8 @@
     <div class="d-flex justify-content-between mb-1">
       <div class="btn-group" role="group" aria-label="Basic example">
         <button id="download" type="button" class="btn btn-sm btn-outline-secondary">Download</button>
-        <button id="archive" type="button" class="btn btn-sm btn-outline-secondary">Archive</button>
-        <button id="move" type="button" class="btn btn-sm btn-outline-secondary">Move</button>
+        <button id="archive" type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#archiveModal">Archive</button>
+        <button id="move" type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#moveModal">Move</button>
         <button id="delete" type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
       </div>
       <div class="btn-group" role="group" aria-label="Basic example">
