--- a/web/css/frame.css
+++ b/web/css/frame.css
@@ -1,4 +1,32 @@
 body {
-    /* overflow-y: hidden; */
+    overflow-y: hidden;
 }
 
+tbody {
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    flex: 1;
+}
+
+.table-header-item label {
+    cursor: pointer;
+    margin: 0px; 
+    padding: 0px;
+}
+
+.header-type {
+    width: 70px;
+}
+.header-size {
+    width: 120px; 
+    padding-right: 20px;
+}
+
+.header-date {
+    width: 200px;
+}
+
+.table-body-type {
+    text-align: center;
+}
