--- a/web/css/frame.css
+++ b/web/css/frame.css
@@ -1,32 +1,9 @@
-body {
-    overflow-y: hidden;
-}
+body { overflow-y: hidden; }
+.table-header-item label { cursor: pointer; margin: 0px;  padding: 0px; }
+.table-header-type { width: 100px; }
+.table-header-size { width: 120px;  padding-right: 20px; }
+.table-header-time { width: 200px; }
+.table-body-type { text-align: center; }
 
-tbody {
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    flex: 1;
-}
-
-.table-header-item label {
-    cursor: pointer;
-    margin: 0px; 
-    padding: 0px;
-}
-
-.header-type {
-    width: 70px;
-}
-.header-size {
-    width: 120px; 
-    padding-right: 20px;
-}
-
-.header-date {
-    width: 200px;
-}
-
-.table-body-type {
-    text-align: center;
-}
+.table-fix-head          { overflow-y: auto; height: calc(100vh - 110px); }
+.table-fix-head thead th { position: sticky; top: -1px;}
