--- a/web/template/frame.html
+++ b/web/template/frame.html
@@ -23,24 +23,7 @@
   <link rel="stylesheet" href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/web/css/frame.css">
   <meta name="theme-color" content="#563d7c">
-  <style>
-    .bd-placeholder-img {
-      font-size: 1.125rem;
-      text-anchor: middle;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-    }
-
-    @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-      }
-    }
-  </style>
 </head>
-
 <body>
   <nav class="navbar navbar-expand-md navbar-dark sticky-top bg-dark mb-1">
     <a class="navbar-brand" href="/home">File Manager</a>
@@ -56,7 +39,7 @@
         </li>
         {{ end }}
       </ul>
-      <form class="form-inline mt-2 mt-md-0">
+      <form class="form-inline mt-2 mt-md-0" action="/move" method="post" enctype="multipart/form-data">
         <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
@@ -76,6 +59,14 @@
         <button id="new" type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#newModal">New Folder</button>
       </div>
     </div>
+    {{ if .alert }}
+      <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <strong>{{ .alert.title }}:</strong> {{ .alert.message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+    {{ end }}
     <div class="table-fix-head">
       <table class="table border table-hover table-md">
         <thead class="thead-light">
