--- a/web/template/frame.html
+++ b/web/template/frame.html
@@ -24,6 +24,7 @@
   <link rel="stylesheet" href="/web/css/frame.css">
   <meta name="theme-color" content="#563d7c">
 </head>
+
 <body>
   <nav class="navbar navbar-expand-md navbar-dark sticky-top bg-dark mb-1">
     <a class="navbar-brand" href="/home">File Manager</a>
@@ -41,165 +42,16 @@
       </ul>
     </div>
   </nav>
-
-  <main role="main" class="container">
-    <div class="d-flex justify-content-between mb-1">
-      <div class="btn-group" role="group">
-        <button id="download" type="button" class="btn btn-sm btn-outline-secondary">Download</button>
-        <button id="archive" type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#archiveModal">Archive</button>
-        <button id="move" type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#moveModal">Move</button>
-        <button id="delete" type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
-        <input id="filter" style="margin-left:10px; width:100px;" type="text" class="form-control" placeholder="过滤">
-      </div>
-      <div class="btn-group" role="group">
-        <button id="upload" type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#uploadModal">Upload File</button>
-        <button id="new" type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#newModal">New Folder</button>
-      </div>
-    </div>
-    {{ if .alert }}
-      <div class="alert alert-warning alert-dismissible fade show" role="alert">
-        <strong>{{ .alert.title }}:</strong> {{ .alert.message }}
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-    {{ end }}
-    <div class="table-fix-head">
-      <table class="table border table-hover table-md">
-        <thead class="thead-light">
-          <tr>
-            <th><input type="checkbox" class="select-all" /></th>
-            <th class="table-header-item table-header-name" scope="col"><label>Name</label><i class="fa fa-fw fa-sort"></i></th>
-            <th class="table-header-item table-header-time" scope="col"><label>Time</label><i class="fa fa-fw fa-sort"></i></th>
-            <th class="table-header-item table-header-type" scope="col"><label>Type</label><i class="fa fa-fw fa-sort"></i></th>
-            <th class="table-header-item table-header-size" scope="col"><label>Size</label><i class="fa fa-fw fa-sort"></i></th>
-          </tr>
-        </thead>
-        <tbody>
-          {{ range .list }}
-          <tr class="file-row">
-            <td style="width:30px;"><input type="checkbox" class="select" value="{{ .Name }}" /></td>
-            <td><i class="fa fa-fw {{ .Icon }}" isdir="{{ .IsDir }}"></i> <a class="filename" href="{{ .Href }}">{{ .Name }}</a></td>
-            <td>{{ .ModTime }}</td>
-            <td>{{ .Type }}</td>
-            <td style="text-align: left;">{{ .Size }}</td>
-          </tr>
-          {{ end }}
-        </tbody>
-      </table>
-    </div>
-  </main>
-
-   <!-- Modal -->
-<div class="modal fade" id="moveModal" tabindex="-1" role="dialog" aria-labelledby="moveModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="moveModalLabel">Move</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form action="/move" method="post" enctype="multipart/form-data">
-          <input class="frompath form-control" type="text" name="frompath" style="display:none;">
-          <div class="container row">
-            <input id="moveInput" type="text" class="form-control" name="name">
-            <input id="moveSubmit" type="submit" class="form-control" value="Ok" style="display:none;">
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <button id="moveOk" type="button" class="btn btn-primary" data-dismiss="modal">Move</button>
-      </div>
-    </div>
-  </div>
-</div>
-        <!-- Modal -->
-<div class="modal fade" id="archiveModal" tabindex="-1" role="dialog" aria-labelledby="archiveModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="archiveModalLabel">Archive</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form action="/archive" method="post" enctype="multipart/form-data">
-          <p>just a moment...</p>
-          <input id="pathlist" type="text" name="pathlist" class="form-control" style="display:none;">
-          <div class="container row">
-            <input id="archiveInput" type="text" class="form-control" name="name">
-            <input id="archiveSubmit" type="submit" class="form-control" value="Ok" style="display:none;">
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <button id="archiveOk" type="button" class="btn btn-primary" data-dismiss="modal">Archive</button>
-      </div>
-    </div>
-  </div>
-</div>
-        <!-- Modal -->
-<div class="modal fade" id="uploadModal" tabindex="-1" role="dialog" aria-labelledby="uploadModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="uploadModalLabel">Upload</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form action="/upload" method="post" enctype="multipart/form-data">
-          <input type="file" name="files" class="form-control" multiple>
-          <input id="uploadSubmit" type="submit" value="Upload" style="display:none;">
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <button id="uploadOk" type="button" class="btn btn-primary" data-dismiss="modal">Upload</button>
-      </div>
-    </div>
-  </div>
-</div>
-        <!-- Modal -->
-<div class="modal fade" id="newModal" tabindex="-1" role="dialog" aria-labelledby="newModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="newModalLabel">New Folder</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form action="/new" method="post" enctype="multipart/form-data">
-          <div class="container row">
-            <input type="text" class="form-control" name="name">
-            <input id="newSubmit" type="submit" class="form-control" value="Ok" style="display:none;">
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <button id="newOk" type="button" class="btn btn-primary" data-dismiss="modal">New</button>
-      </div>
-    </div>
-  </div>
-</div>
+  {{ template "main" . }}
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.min.js"
-    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-    crossorigin="anonymous"></script>
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script>
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+  </script>
   <script src="/web/js/frame.js"></script>
 </body>
 
