--- a/web/template/includes/index.html
+++ b/web/template/includes/index.html
@@ -29,7 +29,7 @@
     <table class="table border table-hover table-md">
       <thead class="thead-light">
         <tr>
-          <th><input type="checkbox" class="select-all" /></th>
+          <th style="width:30px;"><input type="checkbox" class="select-all" /></th>
           <th class="table-header-item table-header-name" scope="col"><label>Name</label><i
               class="fa fa-fw fa-sort"></i></th>
           <th class="table-header-item table-header-time" scope="col"><label>Time</label><i
