--- a/web/template/frame.html
+++ b/web/template/frame.html
@@ -4,19 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+  <meta name="description" content="netdisk file manager">
+  <meta name="author" content="ningto.com">
   <meta name="generator" content="Jekyll v4.0.1">
 
-  <!-- 不缓存，调试-->
-  <meta http-equiv="expires" content="0">
-  <meta http-equiv="pragma" content="no-cache">
-  <meta http-equiv="cache-control" content="no-cache">
-
-  <title>Top navbar example · Bootstrap</title>
-
-  <link rel="canonical" href="https://v4.bootcss.com/docs/examples/navbar-static/">
-
+  <title>Go Netdisk</title>
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -27,7 +19,7 @@
 
 <body>
   <nav class="navbar navbar-expand-md navbar-dark sticky-top bg-dark mb-1">
-    <a class="navbar-brand" href="/home">File Manager</a>
+    <a class="navbar-brand" href="/home">Go Netdisk</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
       aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
