--- a/web/template/includes/index.html
+++ b/web/template/includes/index.html
@@ -2,19 +2,19 @@
 <main role="main" class="container">
   <div class="d-flex justify-content-between mb-1">
     <div class="btn-group" role="group">
-      <button id="download" type="button" class="btn btn-sm btn-outline-secondary">Download</button>
+      <button id="download" type="button" class="btn btn-sm btn-outline-secondary"><i class="fa fa-fw fa-download" aria-hidden="true"></i>Download</button>
       <button id="archive" type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal"
-        data-target="#archiveModal">Archive</button>
+        data-target="#archiveModal"><i class="fa fa-fw fa-archive" aria-hidden="true"></i>Archive</button>
       <button id="move" type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal"
-        data-target="#moveModal">Move</button>
-      <button id="delete" type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
+        data-target="#moveModal"><i class="fa fa-fw fa-clipboard" aria-hidden="true"></i>Move</button>
+      <button id="delete" type="button" class="btn btn-sm btn-outline-secondary"><i class="fa fa-fw fa-trash" aria-hidden="true"></i>Delete</button>
       <input id="filter" style="margin-left:10px; width:100px;" type="text" class="form-control" placeholder="Filter">
     </div>
     <div class="btn-group" role="group">
       <button id="upload" type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal"
-        data-target="#uploadModal">Upload File</button>
+        data-target="#uploadModal"><i class="fa fa-fw fa-upload" aria-hidden="true"></i>Upload File</button>
       <button id="new" type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal"
-        data-target="#newModal">New Folder</button>
+        data-target="#newModal"><i class="fa fa-fw fa-plus" aria-hidden="true"></i>New Folder</button>
     </div>
   </div>
   {{ if .alert }}
