--- a/web/template/frame.html
+++ b/web/template/frame.html
@@ -9,6 +9,7 @@
   <meta name="generator" content="Jekyll v4.0.1">
 
   <title>Go Netdisk</title>
+  <link rel="shortcut icon" href="/web/favicon.ico" type="image/x-icon"/>
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
