--- a/web/template/layouts/move_modal.html
+++ b/web/template/layouts/move_modal.html
@@ -10,7 +10,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <form action="/move" method="post" enctype="multipart/form-data">
+        <form action="/admin/move" method="post" enctype="multipart/form-data">
           <input class="frompath form-control" type="text" name="frompath" style="display:none;">
           <div class="container row">
             <input id="moveInput" type="text" class="form-control" name="name">
