--- a/web/template/layouts/upload_modal.html
+++ b/web/template/layouts/upload_modal.html
@@ -11,7 +11,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <form action="/admin/upload" method="post" enctype="multipart/form-data">
+        <form action="/upload" method="post" enctype="multipart/form-data">
           <input type="file" name="files" class="form-control" multiple>
           <input id="uploadSubmit" type="submit" value="Upload" style="display:none;">
         </form>
