--- a/web/template/frame.html
+++ b/web/template/frame.html
@@ -6,14 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="netdisk file manager">
   <meta name="author" content="ningto.com">
-  <meta name="generator" content="Jekyll v4.0.1">
-
   <title>Go Netdisk</title>
-  <link rel="shortcut icon" href="/web/favicon.ico" type="image/x-icon"/>
-  <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css"
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link rel="stylesheet" href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="shortcut icon" href="/web/favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" href="/web/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/web/css/font-awesome.min.css">
   <link rel="stylesheet" href="/web/css/frame.css">
   <meta name="theme-color" content="#563d7c">
 </head>
@@ -36,15 +32,9 @@
     </div>
   </nav>
   {{ template "main" . }}
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.min.js"
-    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-  </script>
+  <script src="/web/js/jquery.slim.min.js"></script>
+  <script src="/web/js/bootstrap.min.js"></script>
+  <script src="/web/js/popper.min.js"></script>
   <script src="/web/js/frame.js"></script>
 </body>
 
