--- a/web/template/frame.html
+++ b/web/template/frame.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-md navbar-dark sticky-top bg-dark mb-1">
-    <a class="navbar-brand" href="/home">Go Netdisk</a>
+  <nav class="navbar navbar-expand-md sticky-top border-bottom shadow-sm mb-1">
+    <a class="navbar-brand header-logo text-dark" href="/home">Go Netdisk</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
       aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -25,10 +25,15 @@
       <ul class="navbar-nav mr-auto">
         {{ range .nav }}
         <li class="nav-item">
-          <a class="nav-link" href="{{ .Href }}">/ {{ .Name }}</a>
+          <a class="nav-link text-dark" href="{{ .Href }}">/ {{ .Name }}</a>
         </li>
         {{ end }}
       </ul>
+      <!--
+      <div class="d-flex justify-content-end align-items-center">
+        <a class="btn btn-sm btn-outline-secondary" href="#">Sign</a>
+      </div>
+      -->
     </div>
   </nav>
   {{ template "main" . }}
