判断空目录

--- a/web/template/frame.html
+++ b/web/template/frame.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="netdisk file manager">
   <meta name="author" content="ningto.com">
+  <meta name="referrer" content="same-origin">
   <title>Go Netdisk</title>
   <link rel="shortcut icon" href="/web/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="/web/css/bootstrap.min.css">
