--- a/web/css/frame.css
+++ b/web/css/frame.css
@@ -77,3 +77,7 @@ a.text-dark:focus, a.text-dark:hover {
   padding-right: .5rem;
   padding-left: 0rem;
 }
+
+.fa-file-audio-o:hover {
+  cursor:pointer;
+}
