--- a/web/template/includes/index.html
+++ b/web/template/includes/index.html
@@ -1,5 +1,8 @@
 {{ define "main" }}
 <main role="main" class="container">
+  {{ if .hasmusic }}
+    <audio id="mymusic" src=""></audio>
+  {{ end }}
   <div class="d-flex justify-content-between mb-1">
     <div class="btn-group" role="group">
       <button id="download" type="button" class="btn btn-sm btn-outline-secondary"><i class="fa fa-fw fa-download" aria-hidden="true"></i>Download</button>
